--- a/core/css/style.css
+++ b/core/css/style.css
@@ -581,8 +581,8 @@ body {
 }
 
 #code-editor {
-  left: -2000;
-  top: 20;
+  left: 20px;
+  top: 20px;
   background-color: rgba(255,255,255,.6);
   overflow-y: scroll
 }
