--- a/core/css/style.css
+++ b/core/css/style.css
@@ -566,6 +566,13 @@ body {
   position: absolute;
 }
 
+#canvas-2d {
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+}
+
 #canvas-3d {
   bottom: 40px;
   left: 50%;
